# chess-move-gen

./: Cargo.toml
src/: chess_board.rs  chess_move.rs  lib.rs  move_gen.rs  std_board.rs  std_move.rs  types.rs
src/tests/: mod.rs  move_gen_tests.rs  tools.rs
