[package]
name = "chess-move-gen"
version = "0.1.0"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-game-traits = "0.1"
pgn-traits = "0.1"
serde = { version = "1.0", features = ["derive"] }